tests/NormalTests/paczka1/fuzzy1/91752069.err
Error in line 6: S463 A937 73,4
Error in line 13: UYCQlME S463 -2,5
Error in line 7: Fln S214 37,3
Error in line 12: UYCQlME S463 38,3
Error in line 33: S463 A937 182,3
